k8s/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: prouan/result:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: voting-app
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
