k8s/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: prouan/vote:latest 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: voting-app
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
